# django-sqlite-strict

./: .release-please-config.json  .typos.toml  CHANGELOG.md  LICENSE  README.md  noxfile.py  prek.toml  pyproject.toml
.github/: dependabot.yaml
.github/actions/publish/: action.yaml
.github/workflows/: _checks.yaml  ci.yaml  on-tag.yaml  release-please.yaml
src/django_sqlite_strict/: apps.py  base.py  checks.py
tests/: settings.py  test_base.py  test_checks.py
