# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project]
name = "django-sqlite-strict"
version = "0.1.0"
description = "SQLite database engine for Django that makes every table a STRICT table."
readme = "README.md"
keywords = ["Django", "SQLite", "strict"]
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Alberto Morón Hernández", email = "alberto.moronh@gmail.com" },
]
# <https://pypi.org/classifiers/>
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = ["django>=4.2"]

[dependency-groups]
dev = ["ipython>8.37.0,<9.0.0"]
test = [
    "coverage>=7.15.0,<8.0.0",
    "pytest>=9.1.0,<10.0.0",
    "pytest-django>=4.12.0,<5.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "pytest-randomly>=4.1.0,<5.0.0",
]

[project.urls]
Repository = "https://github.com/albertomh/django-sqlite-strict"
Changelog = "https://github.com/albertomh/django-sqlite-strict/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "7 days"

[tool.uv.build-backend]
module-name = ["django_sqlite_strict"]
module-root = "src"

[tool.pytest]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "--pdbcls=IPython.terminal.debugger:TerminalPdb",
    "--ds=tests.settings",
]
filterwarnings = [
    "error::ResourceWarning",
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
]

[tool.ruff]
exclude = [".pdbrc"]
indent-width = 4
line-length = 90

[tool.ruff.lint]
ignore = []
select = [
    # flake8-bugbear
    "B",
    # pycodestyle errors
    "E",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    # Pyflakes
    "F",
    #flake8-logging-format
    "G",
    # flake8-logging
    "LOG",
    # pylint-pl
    "PL",
    # flake8-pytest-style
    "PT",
    # ruff-specific-rules-ruf
    "RUF",
    # flake8-bandit
    "S",
    # flake8-tidy-imports
    "TID",
    # tryceratops-try
    "TRY",
    # flake8-print
    "T20",
    # pyupgrade-up
    "UP",
    # pycodestyle warnings
    "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S"]

[tool.coverage.report]
omit = ["*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if TYPE_CHECKING",
]

[tool.coverage.run]
source = ["django_sqlite_strict"]
parallel = true
concurrency = ["multiprocessing"]
